# jwk-simple

./: .gitignore  AGENTS.md  API_LAYER_PROPOSAL.md  API_LAYER_PROPOSAL_REVIEW_NOTES.md  API_SELECTION_IMPLEMENTATION_PLAN.md  API_SELECTION_V1_ACCEPTANCE.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  devenv.nix  devenv.yaml
.github/actions/devenv/: action.yaml
.github/workflows/: analysis-scorecard.yaml  ci-nix.yaml  ci.yaml  claude-code-review.yaml  claude-code-review.yml  claude.yaml
benches/: benchmarks.rs
docs/: API_SELECTION.md  jsonwebtoken-webcrypto-spec.md
docs/plans/: 2026-02-25-verify-algorithm-and-find-first-by-alg.md
examples/: basic_usage.rs  http_fetch.rs  http_fetch_wasm.rs  jwt_verify.rs  webcrypto_jwt_verify.rs
src/: encoding.rs  error.rs  integrations.rs  jwk.rs  jwks.rs  lib.rs
src/integrations/: jwt_simple.rs  web_crypto.rs
src/jwk/: ec.rs  okp.rs  rsa.rs  symmetric.rs  thumbprint.rs
src/jwks/: cache.rs  cloudflare.rs  inmemory_cache.rs  remote.rs  store.rs
src/jwks/cache/: moka.rs
src/jwks/store/: http.rs
tests/: rfc7517_compliance.rs  rfc_vectors.rs  web_crypto.rs
