[package]
name = "jwk-simple"
edition = "2024"
version = "0.1.0"
description = "JWK/JWKS for Rust and WASM (RFC 7517, 7518, 7638, 8037, 9864) with jwt-simple integration"
license = "MIT"
repository = "https://github.com/sagikazarmark/jwk-simple"
homepage = "https://github.com/sagikazarmark/jwk-simple"
keywords = ["jwk", "jwks", "jose", "jwt", "webcrypto"]
categories = ["authentication", "cryptography", "web-programming", "wasm"]

[dependencies]
async-trait = "0.1"
base64ct = { version = "1.8", features = ["alloc"] }
futures = "0.3"
js-sys = { version = "0.3", optional = true }
jwt-simple = { version = "0.12", optional = true, default-features = false, features = ["pure-rust"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha1 = "0.10"
tokio = { version = "1.49", optional = true, features = ["sync", "time"] }
url = "2.5"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Crypto",
    "CryptoKey",
    "JsonWebKey",
    "SubtleCrypto",
    "Window",
    "WorkerGlobalScope",
] }
worker = { version = "0.7", optional = true }
zeroize = { version = "1.8", features = ["derive"] }
x509-parser = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
cache-inmemory = ["dep:tokio"]
cloudflare = ["dep:worker"]
http = ["dep:reqwest"]
jwt-simple = ["dep:jwt-simple"]
web-crypto = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys"]

[dev-dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "test-util", "net", "io-util", "time"] }
serde_json = "1.0"
criterion = "0.8"
wasm-bindgen-test = "0.3"

[[example]]
name = "webcrypto_jwt_verify"
required-features = ["web-crypto"]

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
