[package]
name = "jwk-simple"
edition = "2024"
rust-version = "1.90"
version = "0.1.0"
description = "JWK/JWKS for Rust and WASM (RFC 7517, 7518, 7638, 8037, 9864) with jwt-simple integration"
license = "MIT"
repository = "https://github.com/sagikazarmark/jwk-simple"
homepage = "https://github.com/sagikazarmark/jwk-simple"
readme = "README.md"
keywords = ["jwk", "jwks", "jose", "jwt", "webcrypto"]
categories = ["authentication", "cryptography", "web-programming", "wasm"]

[dependencies]
async-trait = "0.1"
base64ct = { version = "1.8", features = ["alloc"] }
futures = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }
jwt-simple = { version = "0.12", optional = true, default-features = false }
pkcs1 = { version = "0.7", optional = true, default-features = false, features = ["alloc"] }
moka = { version = "0.12", optional = true, features = ["future"] }
reqwest = { version = "0.13", optional = true, default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha1 = "0.10"
subtle = "2.6"
url = "2.5"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Crypto",
    "CryptoKey",
    "JsonWebKey",
    "SubtleCrypto",
    "Window",
    "WorkerGlobalScope",
] }
worker = { version = "0.7", optional = true }
zeroize = { version = "1.8", features = ["derive"] }
x509-parser = "0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = []
moka = ["dep:moka"]
cloudflare = ["dep:worker", "dep:futures"]
http = ["dep:reqwest"]
jwt-simple = ["dep:jwt-simple", "dep:pkcs1"]
web-crypto = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys"]

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "test-util", "net", "io-util", "time"] }
criterion = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "default-tls"] }
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[[example]]
name = "http_fetch"
required-features = ["http"]

[[example]]
name = "http_fetch_wasm"
required-features = ["http"]

[[example]]
name = "jwt_verify"
required-features = ["jwt-simple", "jwt-simple/pure-rust"]

[[example]]
name = "webcrypto_jwt_verify"
required-features = ["web-crypto"]

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
features = ["http", "moka", "jwt-simple", "jwt-simple/pure-rust", "web-crypto", "cloudflare"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "Release {{version}}"
tag-prefix = ""
